fix : challenge 함수 수정